# This file is part of the Neper software package.
# Copyright (C) 2003-2019, Romain Quey.
# See the COPYING file in the top-level directory.

cmake_minimum_required(VERSION 2.8)
project(neper)

set (NEPER_VERSION \"3.5.0\")

# should we use the optional libraries?
set (HAVE_GSL ON)
option (HAVE_NLOPT           "Use NLopt"                                 ON )
option (HAVE_LIBSCOTCH     "Use libscotch"                               OFF)
option (HAVE_PTHREAD       "Use pthread (for libScotch version 6 and later" OFF)
option (HAVE_OPENMP        "Use OpenMP"                                  ON )
option (DEVEL_OPTIMIZATION "Enable optimization (ON for production use)" ON )
option (DEVEL_DEBUGGING_TEST "Enable debugging tests (OFF for production use)"   OFF)
option (DEVEL_DEBUGGING_FLAG "Enable debugging compilation flag (OFF for production use)"   OFF)
option (DEVEL_PROFILING    "Enable profiling (OFF for production use)"   OFF)

include_directories("${PROJECT_SOURCE_DIR}")

include_directories("${PROJECT_SOURCE_DIR}/contrib/muparser")
set (MUPARSER_SOURCE_DIR "${PROJECT_SOURCE_DIR}/contrib/muparser")
set (MUPARSER_BINARY_DIR "${PROJECT_BINARY_DIR}/contrib/muparser")
set (MUPARSER_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/contrib/muparser/include")

include_directories("${PROJECT_SOURCE_DIR}/contrib/ut")
set (UT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/contrib/ut")
set (UT_BINARY_DIR "${PROJECT_BINARY_DIR}/contrib/ut")
set (UT_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/contrib/ut/include")

include_directories("${PROJECT_SOURCE_DIR}/contrib/orilib")
include_directories("${PROJECT_SOURCE_DIR}/neut")
include_directories("${PROJECT_SOURCE_DIR}/neper_t")
include_directories("${PROJECT_SOURCE_DIR}/neper_m")
include_directories("${PROJECT_SOURCE_DIR}/neper_v")

include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_BINARY_DIR}/contrib/ut")
include_directories("${PROJECT_BINARY_DIR}/contrib/orilib")
include_directories("${PROJECT_BINARY_DIR}/contrib/muparser")
include_directories("${PROJECT_BINARY_DIR}/neut")
include_directories("${PROJECT_BINARY_DIR}/neper_t")
include_directories("${PROJECT_BINARY_DIR}/neper_m")
include_directories("${PROJECT_BINARY_DIR}/neper_v")

# configure a header file to pass some of the CMake settings to the
# source code
configure_file (
  "${PROJECT_SOURCE_DIR}/neper_config.h.in"
  "${PROJECT_BINARY_DIR}/neper_config.h"
)

add_definitions(-Wall -W -Wno-unknown-pragmas -Wno-deprecated-declarations)
if (DEVEL_OPTIMIZATION)
  add_definitions(-O3)
endif ()

if (DEVEL_DEBUGGING_FLAG)
  add_definitions(-g -Werror)
endif ()

if (DEVEL_PROFILING)
  add_definitions(-pg)
  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
endif ()

SET(HAVE_MUPARSER ON CACHE BOOL "Use muParser") # sets to ON in ut, etc.
SET(HAVE_PNG OFF CACHE BOOL "Use the libpng library") # sets to OFF in ut, etc.

set(BUILD_SHARED_LIBS OFF)

add_subdirectory(contrib/muparser)
add_subdirectory(contrib/ut)
add_subdirectory(contrib/orilib)
add_subdirectory(neut)
add_subdirectory(neper_t)
add_subdirectory(neper_m)
add_subdirectory(neper_v)

unset (HAVE_MUPARSER CACHE) # hide from ccmake (comes from ut)
unset (HAVE_GLPK CACHE)     # hide from ccmake (comes from orilib)
unset (HAVE_PNG CACHE)      # hide from ccmake (comes from ut)

add_executable (neper neper.c)

set (EXTRA_LIBS ${EXTRA_LIBS} muparser)
set (EXTRA_LIBS ${EXTRA_LIBS} ut)
set (EXTRA_LIBS ${EXTRA_LIBS} orilib)
set (EXTRA_LIBS ${EXTRA_LIBS} neut)
set (EXTRA_LIBS ${EXTRA_LIBS} neper_t)
set (EXTRA_LIBS ${EXTRA_LIBS} neper_m)
set (EXTRA_LIBS ${EXTRA_LIBS} neper_v)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

if (HAVE_GSL)
  find_package(GSL REQUIRED)
  set (EXTRA_LIBS ${EXTRA_LIBS} ${GSL_LIBRARIES})
  include_directories(${GSL_INCLUDE_DIRS})
endif ()

if (HAVE_LIBSCOTCH)
  find_package (LIBSCOTCH REQUIRED)
  set (EXTRA_LIBS ${EXTRA_LIBS} ${Scotch_LIBRARIES})
  include_directories (${Scotch_INCLUDE_DIRS})
endif ()

if (HAVE_PTHREAD)
  find_package (Threads REQUIRED)
  set (EXTRA_LIBS ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT})
endif ()

if (HAVE_OPENMP)
  find_package (OpenMP REQUIRED)
  set (EXTRA_LIBS ${EXTRA_LIBS} ${OpenMP_C_FLAGS})
  add_definitions(${OpenMP_C_FLAGS})
endif ()

if (HAVE_NLOPT)                                     # NLOPT
  find_package(NLOPT REQUIRED)                      # NLOPT
  set (EXTRA_LIBS ${EXTRA_LIBS} ${NLOPT_LIBRARIES}) # NLOPT
  include_directories (${NLOPT_INCLUDE_DIRS})       # NLOPT
endif ()

target_link_libraries (neper ${EXTRA_LIBS})

install (TARGETS neper DESTINATION bin
         PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ
	 GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

unset(HAVE_GSL CACHE) # hides it in ccmake
unset(HAVE_PTHREAD CACHE) # hides it in ccmake

# CTEST
enable_testing ()
include(CTest)

# Module -T

add_test (T_n                      ./neper --rcfile none -T -n 2)
add_test (T_id                     ./neper --rcfile none -T -n 2 -id 2)
add_test (T_dim                    ./neper --rcfile none -T -n 2 -dim 2)
add_test (T_domain_cube            ./neper --rcfile none -T -n 2 -domain "cube(1,2,4)")
add_test (T_domain_cylinder        ./neper --rcfile none -T -n 2 -domain "cylinder(1,2,100)")
add_test (T_domain_sphere          ./neper --rcfile none -T -n 2 -domain "sphere(2,100)")
add_test (T_domain_square          ./neper --rcfile none -T -n 2 -dim 2 -domain "square(1,2)")
add_test (T_domain_rotate          ./neper --rcfile none -T -n 2 -domain "cube(1,1,1):rotate(1,1,1,10)")
add_test (T_domain_translate       ./neper --rcfile none -T -n 2 -domain "cube(1,1,1):translate(1,2,3)")
add_test (T_domain_scale           ./neper --rcfile none -T -n 2 -domain "cube(1,1,1):scale(1,2,3)")
add_test (T_domain_split           ./neper --rcfile none -T -n 2 -domain "cube(1,1,1):split(z)")
add_test (T_domain_rotate2         ./neper --rcfile none -T -n 2 -dim 2 -domain "square(1,1):rotate(10)")
add_test (T_domain_translate2      ./neper --rcfile none -T -n 2 -dim 2 -domain "square(1,1):translate(1,2)")
add_test (T_domain_scale2          ./neper --rcfile none -T -n 2 -dim 2 -domain "square(1,1):scale(1,2)")
add_test (T_periodic               ./neper --rcfile none -T -n 2 -periodic 1)
add_test (T_periodic_x             ./neper --rcfile none -T -n 2 -periodic x)
add_test (T_morpho_voronoi         ./neper --rcfile none -T -n 2 -morpho voronoi)
add_test (T_morpho_centroidal      ./neper --rcfile none -T -n 2 -morpho centroidal -morphooptistop "itermax=100")
add_test (T_morpho_cube            ./neper --rcfile none -T -n from_morpho -morpho "cube(2)")
add_test (T_morpho_cube3           ./neper --rcfile none -T -n from_morpho -morpho "cube(2,3,4)")
add_test (T_morpho_square          ./neper --rcfile none -T -n from_morpho -dim 2 -morpho "square(2)")
add_test (T_morpho_square2         ./neper --rcfile none -T -n from_morpho -dim 2 -morpho "square(2,3)")
add_test (T_morpho_tocta           ./neper --rcfile none -T -n from_morpho -morpho "tocta(2)")
add_test (T_morpho_lamellar_w      ./neper --rcfile none -T -n from_morpho -morpho "lamellar(w=0.1)")
add_test (T_morpho_lamellar_w2     ./neper --rcfile none -T -n from_morpho -morpho "lamellar(w=0.1:0.02)")

if (HAVE_NLOPT)
add_test (T_morpho_columnar        ./neper --rcfile none -T -n 2 -morpho "columnar(x)")
add_test (T_morpho_bamboo          ./neper --rcfile none -T -n 2 -morpho "bamboo(x)")
add_test (T_morpho_aspratio        ./neper --rcfile none -T -n 2 -morpho "aspratio(2,1,1)")
add_test (T_morpho_gg              ./neper --rcfile none -T -n 2 -morpho gg)
add_test (T_morphooptistop_itermax ./neper --rcfile none -T -n 2 -morpho gg -morphooptistop itermax=10)
add_test (T_morpho_columnar_gg     ./neper --rcfile none -T -n 2 -morpho "columnar(x),gg" -morphooptistop itermax=10)
add_test (T_morpho_bamboo_gg       ./neper --rcfile none -T -n 2 -morpho "bamboo(x),gg" -morphooptistop itermax=10)
add_test (T_morpho_aspratio_gg     ./neper --rcfile none -T -n 2 -morpho "aspratio(2,1,1),gg" -morphooptistop itermax=10)
# add_test (T_morpho_tesr)
add_test (T_morphooptini_packing   ./neper --rcfile none -T -n 2 -morpho gg -morphooptiini coo:packing,weight:radeq -morphooptistop itermax=10)
add_test (T_morphooptini_random    ./neper --rcfile none -T -n 2 -morpho gg -morphooptiini coo:random,weight:avradeq -morphooptistop itermax=10)
# add_test (T_multiseed)
add_test (T_morphooptiobj_cvm      ./neper --rcfile none -T -n 2 -morpho gg -morphooptiobjective cvm -morphooptistop itermax=10)
add_test (T_morphooptiobj_ad       ./neper --rcfile none -T -n 2 -morpho gg -morphooptiobjective ad -morphooptistop itermax=10)
add_test (T_morphooptiobj_FL2      ./neper --rcfile none -T -n 2 -morpho gg -morphooptiobjective FL2 -morphooptistop itermax=10)
add_test (T_morphooptiobj_FL2w     ./neper --rcfile none -T -n 2 -morpho gg -morphooptiobjective FL2w -morphooptistop itermax=10)
add_test (T_morphooptidof          ./neper --rcfile none -T -n 2 -morpho gg -morphooptidof x,z -morphooptistop itermax=10)
add_test (T_morphooptistop_val     ./neper --rcfile none -T -n 2 -morpho gg -morphooptistop val=10)
add_test (T_morphooptistop_time    ./neper --rcfile none -T -n 2 -morpho gg -morphooptistop time=0.1)
add_test (T_morphooptistop_timeval ./neper --rcfile none -T -n 2 -morpho gg -morphooptistop val=10,time=0.1)
add_test (T_morphooptialgo         ./neper --rcfile none -T -n 2 -morpho gg -morphooptialgo praxis -morphooptistop itermax=10)
add_test (T_morphooptigrid         ./neper --rcfile none -T -n 2 -morpho gg -morphooptigrid "diameq:regular(-1,10,110),sphericity:regular(-0.1,1.1,120),1-sphericity:regular(-0.1,1.1,120)" -morphooptistop itermax=10)
add_test (T_morphooptismooth       ./neper --rcfile none -T -n 2 -morpho gg -morphooptismooth 0.1 -morphooptistop itermax=10)
add_test (T_morphooptideltamax     ./neper --rcfile none -T -n 2 -morpho gg -morphooptideltamax 0.1 -morphooptistop itermax=10)
add_test (T_morphooptinistep       ./neper --rcfile none -T -n 2 -morpho gg -morphooptiinistep diameq/5 -morphooptistop itermax=10)
add_test (T_morphooptilogtime      ./neper --rcfile none -T -n 2 -morpho gg -morphooptilogtime iter,total,cumtotal -morphooptistop itermax=10)
add_test (T_morphooptilogvar       ./neper --rcfile none -T -n 2 -morpho gg -morphooptilogvar iter,id,x,y,z,w -morphooptistop itermax=10)
add_test (T_morphooptilogval       ./neper --rcfile none -T -n 2 -morpho gg -morphooptilogval iter,val,valmin -morphooptistop itermax=10)
add_test (T_morphooptilogdis       ./neper --rcfile none -T -n 2 -morpho gg -morphooptilogdis iter,x,tarpdf -morphooptistop itermax=10)
endif ()

add_test (T_sort                   ./neper --rcfile none -T -n 2 -sort x+y+z)
# # add_test (T_scale                  ./neper --rcfile none -T -n 2 -scale 2:1:0.5)
add_test (T_transform_scale        ./neper --rcfile none -T -n 2 -transform "scale(1,2,3)")
add_test (T_transform_rotate       ./neper --rcfile none -T -n 2 -transform "rotate(1,0,0,45)")
add_test (T_transform_rmsat        ./neper --rcfile none -T -n 2 -for tesr -transform rmsat)
add_test (T_transform_rs           ./neper --rcfile none -T -n 2 -for tesr -transform "rasterscale(0.5,1,2)")
add_test (T_transform_grow         ./neper --rcfile none -T -n 2 -for tesr -domain "cylinder(1,1,100)" -transform grow)
add_test (T_ori                    ./neper --rcfile none -T -n 2 -ori "fibre(x,1,1,1)")
add_test (T_oricrysym              ./neper --rcfile none -T -n 2 -oricrysym cubic)
add_test (T_reg                    ./neper --rcfile none -T -n 2 -reg 1)
add_test (T_reg_fmax               ./neper --rcfile none -T -n 2 -reg 1 -fmax 10)
add_test (T_reg_sel                ./neper --rcfile none -T -n 2 -reg 1 -sel 0.01)
add_test (T_reg_rsel               ./neper --rcfile none -T -n 2 -reg 1 -rsel 0.5)
add_test (T_reg_mloop              ./neper --rcfile none -T -n 2 -reg 1 -mloop 1)
add_test (T_o                      ./neper --rcfile none -T -n 2 -o foo)
add_test (T_format                 ./neper --rcfile none -T -n 2 -format tess,geo,ply,obj,3dec,fe,tesr,ami)
add_test (T_tesrformat             ./neper --rcfile none -T -n 2 -format tesr -tesrformat binary8)
add_test (T_tesrsize               ./neper --rcfile none -T -n 2 -format tesr -tesrsize 10)
add_test (T_oridescriptor          ./neper --rcfile none -T -n 2 -oridescriptor R)
add_test (T_oriformat              ./neper --rcfile none -T -n 2 -oriformat fepx)
add_test (T_statcell              ./neper --rcfile none -T -n 2 -statcell "id,x,y,z,true,body,state,area,vol,size,diameq,radeq,sphericity,convexity,dihangleav,dihanglemin,dihanglemax,dihangles,vernb,edgenb,facenb,neighnb,vers,edges,faces,npolys,faceareas,faceeqs,vercoos,scaleid(1)")
add_test (T_statseed              ./neper --rcfile none -T -n 2 -statseed id,x,y,z,w)
add_test (T_statver               ./neper --rcfile none -T -n 2 -statver  id,x,y,z,true,body,state,domtype,edgenb,facenb,polynb)
add_test (T_statedge              ./neper --rcfile none -T -n 2 -statedge id,x,y,z,true,body,state,domtype,length,cyl,vernb,facenb,polynb,faces)
add_test (T_statface              ./neper --rcfile none -T -n 2 -statface id,x,y,z,true,body,state,domtype,area,diameq,radeq,circularity,dihangleav,dihanglemin,dihanglemax,dihangles,ff,vernb,edgenb,polynb,neighnb,vers,edges)
add_test (T_statpoly              ./neper --rcfile none -T -n 2 -statpoly "id,x,y,z,true,body,state,area,vol,size,diameq,radeq,sphericity,convexity,dihangleav,dihanglemin,dihanglemax,dihangles,vernb,edgenb,facenb,neighnb,vers,edges,faces,npolys,faceareas,faceeqs,vercoos,scaleid(1)")
# add_test (T_statpoint)
# add_test (T_checktess)
add_test (T_loadtess              ./neper --rcfile none -T -loadtess n2-id1.tess -statcell x -format tess,tesr)
add_test (T_loadtesr              ./neper --rcfile none -T -loadtesr n2-id1.tesr -statcell x -format tesr)

add_test (Tm2_n                     ./neper --rcfile none -T -n 2::2 -o n5x5)
add_test (Tm2_dim                   ./neper --rcfile none -T -n 2::2 -dim 2)
add_test (Tm2_domain_cube           ./neper --rcfile none -T -n 2::2 -domain "cube(1,2,4)")
add_test (Tm2_domain_cylinder       ./neper --rcfile none -T -n 2::2 -domain "cylinder(1,2,10)")
add_test (Tm2_domain_sphere         ./neper --rcfile none -T -n 2::2 -domain "sphere(2,10)")
add_test (Tm2_morpho_voronoi        ./neper --rcfile none -T -n 2::2 -morpho voronoi::voronoi)
add_test (Tm2_morpho_centroidal     ./neper --rcfile none -T -n 2::2 -morpho centroidal::centroidal)
if (HAVE_NLOPT)
add_test (Tm2_morpho_gg             ./neper --rcfile none -T -n 2::2 -morpho gg::gg -morphooptistop itermax=10::itermax=10)
add_test (Tm2_morpho_columnar_gg    ./neper --rcfile none -T -n 2::2 -morpho "columnar(x),gg::columnar(y),gg" -morphooptistop itermax=10::itermax=10)
add_test (Tm2_morpho_bamboo_gg      ./neper --rcfile none -T -n 2::2 -morpho "bamboo(x),gg::bamboo(y),gg" -morphooptistop itermax=10::itermax=10)
add_test (Tm2_morpho_aspratio_gg    ./neper --rcfile none -T -n 2::2 -morpho "aspratio(2,1,1),gg::aspratio(1,2,3),gg" -morphooptistop itermax=10::itermax=10)
endif ()
add_test (Tm2_morpho_cube           ./neper --rcfile none -T -n from_morpho::5 -morpho "cube(2)::voronoi")
add_test (Tm2_morpho_square         ./neper --rcfile none -T -n from_morpho::5 -dim 2 -morpho "square(2)::voronoi")
if (HAVE_NLOPT)
add_test (Tm2_morpho_lamellar_w     ./neper --rcfile none -T -n 2::from_morpho -morpho "voronoi::lamellar(w=0.1)")
add_test (Tm2_morpho_lamellar_w2    ./neper --rcfile none -T -n 2::from_morpho -morpho "voronoi::lamellar(w=0.1:0.02)")
endif ()
# add_test (Tm2_morpho_tesr)
# add_test (Tm2_multiseed)
add_test (Tm2_sort                   ./neper --rcfile none -T -n 2::2 -sort x+y+z)
# add_test (Tm2_scale                  ./neper --rcfile none -T -n 2::2 -scale 2:1:0.5)
add_test (Tm2_reg                    ./neper --rcfile none -T -n 2::2 -reg 1)

add_test (Tm3_n                     ./neper --rcfile none -T -n 2::2::2)
add_test (Tm3_dim                   ./neper --rcfile none -T -n 2::2::2 -dim 2)
add_test (Tm3_domain_cube           ./neper --rcfile none -T -n 2::2::2 -domain "cube(1,2,4)")
add_test (Tm3_domain_cylinder       ./neper --rcfile none -T -n 2::2::2 -domain "cylinder(1,2,100)")
add_test (Tm3_domain_sphere         ./neper --rcfile none -T -n 2::2::2 -domain "sphere(2,100)")
add_test (Tm3_morpho_voronoi        ./neper --rcfile none -T -n 2::2::2 -morpho voronoi::voronoi::voronoi)
add_test (Tm3_morpho_centroidal     ./neper --rcfile none -T -n 7::2::2 -morpho centroidal::centroidal::centroidal)
add_test (Tm3_morpho_cube           ./neper --rcfile none -T -n from_morpho::2::2 -morpho "cube(2)::voronoi::voronoi")
add_test (Tm3_morpho_square         ./neper --rcfile none -T -n from_morpho::2::2 -dim 2 -morpho "square(2)::voronoi::voronoi")
if (HAVE_NLOPT)
add_test (Tm3_morpho_gg             ./neper --rcfile none -T -n 2::2::2 -morpho gg::gg)
add_test (Tm3_morpho_columnar_gg    ./neper --rcfile none -T -n 2::2::2 -morpho "columnar(x),gg::columnar(y),gg::columnar(z)" -morphooptistop itermax=10::itermax=10::itermax=10)
add_test (Tm3_morpho_bamboo_gg      ./neper --rcfile none -T -n 2::2::2 -morpho "bamboo(x),gg::bamboo(z),gg::bamboo(y)" -morphooptistop itermax=10::itermax=10::itermax=10)
add_test (Tm3_morpho_aspratio_gg    ./neper --rcfile none -T -n 2::2::2 -morpho "aspratio(2,1,1),gg::aspratio(1,2,3),gg::aspratio(2,1,2)")
add_test (Tm3_morpho_lamellar_w     ./neper --rcfile none -T -n 2::2::from_morpho -morpho "gg::gg::lamellar(w=0.1)")
add_test (Tm3_morpho_lamellar_w2    ./neper --rcfile none -T -n 2::2::from_morpho -morpho "gg::gg::lamellar(w=0.1:0.02)")
endif ()
# add_test (Tm3_morpho_tesr)
# add_test (Tm3_multiseed)
add_test (Tm3_sort                   ./neper --rcfile none -T -n 2::2::2 -sort x+y+z)
# add_test (Tm3_scale                  ./neper --rcfile none -T -n 2::2::2 -scale 2:1:0.3)
add_test (Tm3_reg                    ./neper --rcfile none -T -n 2::2::2 -reg 1)

# Module -M
add_test (M_pretest1             ./neper --rcfile none -T -n 2 -id 1 -reg 1 -format tess,tesr)
add_test (M_pretest2             ./neper --rcfile none -T -n 2 -id 1 -reg 1 -dim 2 -format tess,tesr -transform rmsat -o n2-id1-dim2)
add_test (M_meshing              ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1)
add_test (M_meshing_hex          ./neper --rcfile none -M n2-id1.tess -elt hex)
add_test (M_cl                   ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -cl 0.5)
add_test (M_rcl                  ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -rcl 0.7)
add_test (M_cl_hex               ./neper --rcfile none -M n2-id1.tess -elt hex -cl 0.5)
add_test (M_rcl_hex              ./neper --rcfile none -M n2-id1.tess -elt hex -rcl 0.7)
add_test (M_cl_hex_dim2          ./neper --rcfile none -M n2-id1-dim2.tess -elt hex -cl 0.5)
add_test (M_rcl_hex_dim2         ./neper --rcfile none -M n2-id1-dim2.tess -elt hex -rcl 0.7)
add_test (M_cl_expr              ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -cl id==2?0.5:0.25)
add_test (M_rcl_expr             ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -rcl id==2?0.7:1)
add_test (M_dim                  ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -dim 1,2)
add_test (M_dim2                 ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -dim all)
add_test (M_dim_expr             ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -dim inputdim)
add_test (M_order                ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -order 2)
add_test (M_order_dim2           ./neper --rcfile none -M n2-id1-dim2.tess -mesh3dclreps 1 -dim 2 -order 2)
add_test (M_order_hex            ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -elt hex -order 2)
add_test (M_order_hex_dim2       ./neper --rcfile none -M n2-id1-dim2.tess -mesh3dclreps 1 -elt hex -order 2)
add_test (M_pl                   ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -pl 1)
add_test (M_clratio              ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -clratio 1:0.5:0.25)
add_test (M_clmin                ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -clmin 0.5)
add_test (M_meshqualmin          ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -meshqualmin 0)
add_test (M_meshqualexpr         ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -meshqualexpr Osize)
add_test (M_meshqualdisexpr      ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -meshqualdisexpr dis)
add_test (M_mesh2dalgo_mead      ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -mesh2dalgo mead)
add_test (M_mesh2dalgo_dela      ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -mesh2dalgo dela)
add_test (M_mesh2dalgo_fron      ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -mesh2dalgo fron)
add_test (M_mesh2dalgo_netg      ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -mesh3dalgo netg)
add_test (M_mesh3dalgo_netgnetg  ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -mesh3dalgo netg:netg)
add_test (M_mesh3dalgo_netggmsh  ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -mesh3dalgo netg:gmsh)
add_test (M_mesh3dalgo_netggmne  ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -mesh3dalgo netg:gmne)

if (HAVE_LIBSCOTCH)
  add_test (M_part                 ./neper --rcfile none -M -loadmesh n2-id1.msh -part 4)
  add_test (M_part2                ./neper --rcfile none -M -loadmesh n2-id1.msh -part 2:2)
  add_test (M_partbalancing        ./neper --rcfile none -M -loadmesh n2-id1.msh -part 2 -partbalan 0)
  add_test (M_part_dim2            ./neper --rcfile none -M n2-id1-dim2.tess -part 4)
endif ()

add_test (M_o                    ./neper --rcfile none -M -loadmesh n2-id1.msh -o foo)
add_test (M_format_inp           ./neper --rcfile none -M -loadmesh n2-id1.msh -for inp)
add_test (M_format_geof          ./neper --rcfile none -M -loadmesh n2-id1.msh -for geof)
add_test (M_format_fepx          ./neper --rcfile none -M -loadmesh n2-id1.msh -for fepx)
add_test (M_remesh1              ./neper --rcfile none -M n2-id1.msh -for tess,msh -o foo)
add_test (M_remesh2              ./neper --rcfile none -M n2-id1.tess,n2-id1.msh -o foo -for tess,msh)
add_test (M_remesh3              ./neper --rcfile none -M n2-id1.tess,n2-id1.msh -clratio 2:1:0.5 -o foo -for tess,msh)
add_test (M_nset1                ./neper --rcfile none -M n2-id1.tess -nset faces,edges)
add_test (M_nset2                ./neper --rcfile none -M n2-id1.tess -nset x0,y1z1,vertices)
add_test (M_nset3                ./neper --rcfile none -M n2-id1.tess -nset all)
add_test (M_faset                ./neper --rcfile none -M n2-id1.tess -faset z0)
add_test (M_statnode             ./neper --rcfile none -M -loadmesh n2-id1.msh -statnode id,x,y,z,dim,2dmeshp,2dmeshd,2dmeshv,2dmeshn)
add_test (M_statelt              ./neper --rcfile none -M -loadmesh n2-id1.msh -statelt id,x,y,z)
add_test (M_statelt0d            ./neper --rcfile none -M -loadmesh n2-id1.msh -statelt0d id,x,y,z,elset0d,true,body,domtype)
add_test (M_statelt1d            ./neper --rcfile none -M -loadmesh n2-id1.msh -statelt1d id,x,y,z,elset1d,length,true,body,domtype)
add_test (M_statelt2d            ./neper --rcfile none -M -loadmesh n2-id1.msh -statelt2d id,x,y,z,elset2d,area,true,body,domtype)
add_test (M_statelt3d            ./neper --rcfile none -M -loadmesh n2-id1.msh -statelt3d id,x,y,z,elset3d,vol,rr,true,body,2dmeshp,2dmeshd,2dmeshv,2dmeshn)
add_test (M_statelset            ./neper --rcfile none -M -loadmesh n2-id1.msh -statelset id,x,y,z)
add_test (M_statelset0d          ./neper --rcfile none -M -loadmesh n2-id1.msh -statelset0d id,x,y,z,eltnb,true,body,domtype)
add_test (M_statelset1d          ./neper --rcfile none -M -loadmesh n2-id1.msh -statelset1d id,x,y,z,length,eltnb,true,body,domtype)
add_test (M_statelset2d          ./neper --rcfile none -M -loadmesh n2-id1.msh -statelset2d id,x,y,z,eltnb,true,body,domtype)
add_test (M_statelset3d          ./neper --rcfile none -M -loadmesh n2-id1.msh -statelset3d id,x,y,z,vol,eltnb,rrav,rrmin,rrmax,Osize,eltnb,true,body)
# add_test (M_statpoint            ./neper --rcfile none -M -loadmesh n2-id1.msh -loadpoint coo -statpoint id,x,y,z,elt,elset,2dmeshp,2dmeshd,2dmeshv,2dmeshn)
add_test (M_tesr_elt_hex         ./neper --rcfile none -M n2-id1.tesr -elt hex -cl 0.1)
add_test (M_tesr_dim2            ./neper --rcfile none -M n2-id1-dim2.tesr -rcl 0.7 -for msh,geof,inp)

add_test (M_interface            ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -interface discontinuous -format msh,inp)
add_test (M_interface2           ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -interface cohesive -format msh,inp)
add_test (M_interface3           ./neper --rcfile none -M n2-id1-dim2.tess -interface discontinuous -faset internal -format geof)

# Module -V
add_test (V_pretest0             ./neper --rcfile none -T -n 2 -id 1 -per 1 -o n2-id1-per)
add_test (V_pretest1             ./neper --rcfile none -T -n 2 -id 1 -reg 1 -statver x -statedge x -statface x -statpoly x -statcell x -statseed x -for tess,ori)
add_test (V_pretest2             ./neper --rcfile none -T -n 2 -id 1 -reg 1 -dim 2 -o n2-id1-dim2 -statedge x -statface x -statcell x)
add_test (V_pretest3             ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -statnode x -statelt0d x -statelt1d x -statelt2d x -statelt3d x -statelset3d x)
add_test (V_pretest4             ./neper --rcfile none -M n2-id1-dim2.tess -mesh3dclreps 1 -statnode x -statelt0d x -statelt1d x -statelt2d x -statelset2d x)
add_test (V_pretest5             ./neper --rcfile none -M n2-id1.tess -mesh3dclreps 1 -statnode x,y,z -o xyz)
add_test (V_pretest6             ./neper --rcfile none -M n2-id1.tess -elt hex -o n5-hex)
add_test (V_seedcol_per           ./neper --rcfile none -V n2-id1-per.tess -print foo)
add_test (V_seedcol_rgb           ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol blue -print foo)
add_test (V_seedcol_rgb2          ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol 10,20,30 -print foo)
add_test (V_seedcol_id            ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol id -print foo)
add_test (V_seedcol_scal          ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol scal:n2-id1.stseed -print foo)
add_test (V_seedcol_scal_colscheme ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol scal:n2-id1.stseed -dataseedcolscheme black,white -print foo)
add_test (V_seedscale             ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol scal:n2-id1.stseed -dataseedscale -1:1 -print foo)
add_test (V_seedscale2            ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol scal:n2-id1.stseed -dataseedscale 0:0.1:1 -print foo)
add_test (V_seedscaletitle        ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol scal:n2-id1.stseed -dataseedscaletitle foo -print foo)
add_test (V_seedtrs               ./neper --rcfile none -V n2-id1.tess -showcell none -showseed all -dataseedcol id -dataseedtrs 0.5 -print foo)
add_test (V_vercol_rgb           ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol blue -print foo)
add_test (V_vercol_rgb2          ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol 10,20,30 -print foo)
add_test (V_vercol_id            ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol id -print foo)
add_test (V_vercol_scal          ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol scal:n2-id1.stver -print foo)
add_test (V_vercol_scal_colscheme ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol scal:n2-id1.stver -datavercolscheme black,white -print foo)
add_test (V_verscale             ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol scal:n2-id1.stver -dataverscale -1:1 -print foo)
add_test (V_verscale2            ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol scal:n2-id1.stver -dataverscale 0:0.1:1 -print foo)
add_test (V_verscaletitle        ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol scal:n2-id1.stver -dataverscaletitle foo -print foo)
add_test (V_vertrs               ./neper --rcfile none -V n2-id1.tess -showcell none -showver all -datavercol id -datavertrs 0.5 -print foo)
add_test (V_edgecol_rgb          ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol blue -print foo)
add_test (V_edgecol_rgb2         ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol 10,20,30 -print foo)
add_test (V_edgecol_id           ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol id -print foo)
add_test (V_edgecol_scal         ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol scal:n2-id1.stedge -print foo)
add_test (V_edgecol_scal_colscheme ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol scal:n2-id1.stedge -dataedgecolscheme black,white -print foo)
add_test (V_edgescale            ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol scal:n2-id1.stedge -dataedgescale -1:1 -print foo)
add_test (V_edgescale2           ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol scal:n2-id1.stedge -dataedgescale 0:0.1:1 -print foo)
add_test (V_edgescaletitle       ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol scal:n2-id1.stedge -dataedgescaletitle foo -print foo)
add_test (V_edgetrs              ./neper --rcfile none -V n2-id1.tess -showcell none -showedge all -dataedgecol id -dataedgetrs 0.5 -print foo)
add_test (V_facecol_rgb          ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol blue -print foo)
add_test (V_facecol_rgb2         ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol 10,20,30 -print foo)
add_test (V_facecol_id           ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol id -print foo)
add_test (V_facecol_scal         ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol scal:n2-id1.stface -print foo)
add_test (V_facecol_scal_colscheme ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol scal:n2-id1.stface -datafacecolscheme black,white -print foo)
add_test (V_facescale            ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol scal:n2-id1.stface -datafacescale -1:1 -print foo)
add_test (V_facescale2           ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol scal:n2-id1.stface -datafacescale 0:0.1:1 -print foo)
add_test (V_facescaletitle       ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol scal:n2-id1.stface -datafacescaletitle foo -print foo)
add_test (V_facetrs              ./neper --rcfile none -V n2-id1.tess -showcell none -showface all -datafacecol id -datafacetrs 0.5 -print foo)
add_test (V_polycol_rgb          ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol blue -print foo)
add_test (V_polycol_rgb2         ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol 10,20,30 -print foo)
add_test (V_polycol_id           ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol id -print foo)
add_test (V_polycol_scal         ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol scal:n2-id1.stpoly -print foo)
add_test (V_polycol_scal_colscheme ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol scal:n2-id1.stpoly -datapolycolscheme black,white -print foo)
add_test (V_polyscale            ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol scal:n2-id1.stpoly -datapolyscale -1:1 -print foo)
add_test (V_polyscale2           ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol scal:n2-id1.stpoly -datapolyscale 0:0.1:1 -print foo)
add_test (V_polyscaletitle       ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol scal:n2-id1.stpoly -datapolyscaletitle foo -print foo)
add_test (V_polytrs              ./neper --rcfile none -V n2-id1.tess -showcell none -showpoly all -datapolycol id -datapolytrs 0.5 -print foo)
add_test (V_cellcol_rgb          ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol blue -print foo)
add_test (V_cellcol_rgb2         ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol 10,20,30 -print foo)
add_test (V_cellcol_id           ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol id -print foo)
add_test (V_cellcol_scal         ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol scal:n2-id1.stcell -print foo)
add_test (V_cellcol_scal_colscheme ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol scal:n2-id1.stcell -datacellcolscheme black,white -print foo)
add_test (V_cellscale            ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol scal:n2-id1.stcell -datacellscale -1:1 -print foo)
add_test (V_cellscale2           ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol scal:n2-id1.stcell -datacellscale 0:0.1:1 -print foo)
add_test (V_cellscaletitle       ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol scal:n2-id1.stcell -datacellscaletitle foo -print foo)
add_test (V_celltrs              ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol id -datacelltrs 0.5 -print foo)
add_test (V_cellcol_ori ./neper --rcfile none -V n2-id1.tess -showcell none -showcell all -datacellcol ori -print foo)

add_test (V_verrad ./neper --rcfile none -V n2-id1.tess -showver all -dataverrad 0.05 -datavercol id -dataedgerad 0.02 -dataedgecol id -datapolycol id -print foo)
add_test (V_csys ./neper --rcfile none -V n2-id1.tess -showcsys 1 -print foo)
add_test (V_csyscoo ./neper --rcfile none -V n2-id1.tess -showcsys 1 -datacsyscoo 0.1:0.2:0.3 -print foo)
add_test (V_csyslength ./neper --rcfile none -V n2-id1.tess -showcsys 1 -datacsyslength 1 -print foo)
add_test (V_csysrad ./neper --rcfile none -V n2-id1.tess -showcsys 1 -datacsysrad 0.1 -print foo)
add_test (V_csyslabel ./neper --rcfile none -V n2-id1.tess -showcsys 1 -datacsyslabel foo:bar:baz -print foo)
add_test (V_csyscol ./neper --rcfile none -V n2-id1.tess -showcsys 1 -datacsyscol red -print foo)

add_test (V_nodecol ./neper --rcfile none -V n2-id1.msh -showelt none -shownode all -datanodecol id -print foo)
add_test (V_nodecol_scal ./neper --rcfile none -V n2-id1.msh -showelt none -shownode all -datanodecol scal:n2-id1.stnode -print foo)
add_test (V_nodecolscheme ./neper --rcfile none -V n2-id1.msh -showelt none -shownode all -datanodecol scal:n2-id1.stnode -datanodecolscheme black,white -print foo)
add_test (V_nodescale ./neper --rcfile none -V n2-id1.msh -showelt none -shownode all -datanodecol scal:n2-id1.stnode -datanodescale -1:1 -print foo)
add_test (V_nodescale2 ./neper --rcfile none -V n2-id1.msh -showelt none -shownode all -datanodecol scal:n2-id1.stnode -datanodescale 0:0.1:1 -print foo)

add_test (V_elsetcol ./neper --rcfile none -V n2-id1.msh -showelt none -showelset3d all -dataelsetcol id -print foo)
add_test (V_elsetcol_scal ./neper --rcfile none -V n2-id1.msh -showelt none -showelset3d all -dataelsetcol scal:n2-id1.stelset3d -print foo)
add_test (V_elsetcolscheme ./neper --rcfile none -V n2-id1.msh -showelt none -showelset3d all -dataelsetcol scal:n2-id1.stelset3d -dataelsetcolscheme black,white -print foo)
add_test (V_elsetscale ./neper --rcfile none -V n2-id1.msh -showelt none -showelset3d all -dataelsetcol scal:n2-id1.stelset3d -dataelsetscale -1:1 -print foo)
add_test (V_elsetscale2 ./neper --rcfile none -V n2-id1.msh -showelt none -showelset3d all -dataelsetcol scal:n2-id1.stelset3d -dataelsetscale 0:0.1:1 -print foo)
add_test (V_elsetscaletitle ./neper --rcfile none -V n2-id1.msh -showelt none -showelset3d all -dataelsetcol scal:n2-id1.stelset3d -dataelsetscaletitle foo -print foo)
add_test (V_elsetcol_ori ./neper --rcfile none -V n2-id1.msh -showelset3d all -dataelsetcol ori:n2-id1.ori -print foo)

add_test (V_nodecoo ./neper --rcfile none -V n2-id1.msh -datanodecoo xyz.stnode -print foo)
add_test (V_nodecoo_disp ./neper --rcfile none -V n2-id1.msh -datanodecoo disp:xyz.stnode -print foo)
add_test (V_nodecoofact ./neper --rcfile none -V n2-id1.msh -datanodecoo xyz.stnode -datanodecoofact 2 -print foo)
add_test (V_slicemesh ./neper --rcfile none -V n2-id1.msh -dataelset3dcol id -slicemesh "x=0.2,y=0.4,z=0.6" -print foo)
add_test (V_slicemesh2 ./neper --rcfile none -V n2-id1.msh -dataelset3dcol id -datanodecoo xyz.stnode -slicemesh "x=0.2,y=0.4,z=0.6" -print foo)
add_test (V_showmesh1 ./neper --rcfile none -V n2-id1.tess,n2-id1.msh -showtess 1 -showmesh 0 -print foo)
add_test (V_showmesh2 ./neper --rcfile none -V n2-id1.tess,n2-id1.msh -showtess 1 -showmesh 1 -print foo)
add_test (V_slicemesh3 ./neper --rcfile none -V n2-id1.tess,n2-id1.msh -slicemesh "x=0.2,y=0.4,z=0.6" -showtess 1 -showmesh 0 -showmeshslice 0 -print foo)
add_test (V_slicemesh4 ./neper --rcfile none -V n2-id1.tess,n2-id1.msh -slicemesh "x=0.2,y=0.4,z=0.6" -showtess 0 -showmesh 1 -showmeshslice 0 -print foo)
add_test (V_slicemesh5 ./neper --rcfile none -V n2-id1.tess,n2-id1.msh -slicemesh "x=0.2,y=0.4,z=0.6" -showtess 0 -showmesh 0 -showmeshslice 1 -print foo)
add_test (V_slicemesh6 ./neper --rcfile none -V n5-hex.msh -dataelset3dcol id -slicemesh "x=0.2,y=0.4,z=0.6" -print foo)
add_test (V_show ./neper --rcfile none -V n2-id1.tess -showpoly "z<0.5" -showface "z>0.9" -showedge "(y>0.9)&&(x<0.1)" -showver "((x>0.9)&&(y>0.9))&&(z>0.9)" -print foo)
add_test (V_showfaceinter ./neper --rcfile none -V n2-id1.tess -showpoly none -showface all -showfaceinter 1 -print foo)
add_test (V_showelt ./neper --rcfile none -V n2-id1.msh -showelt3d all -showelt1d all -print foo)
add_test (V_dataelt3d ./neper --rcfile none -V n2-id1.msh -dataelt3dcol id -showshadow 0 -print foo)
add_test (V_cameracoo1 ./neper --rcfile none -V n2-id1.tess -cameracoo x+2*vx:y+vy:3 -print foo)
add_test (V_cameracoo2 ./neper --rcfile none -V n2-id1.msh -datanodecoo xyz.stnode -cameracoo x+2*vx:y+vy:3 -print foo)
add_test (V_cameracoo3 ./neper --rcfile none -V n2-id1.tess,n2-id1.msh -datanodecoo xyz.stnode -cameracoo x+2*vx:y+vy:3 -print foo)
add_test (V_cameralookat1 ./neper --rcfile none -V n2-id1.tess -cameralookat x:y:1 -print foo)
add_test (V_cameralookat2 ./neper --rcfile none -V n2-id1.msh -cameralookat x:y:1 -print foo)
add_test (V_cameralookat3 ./neper --rcfile none -V n2-id1.tess,n2-id1.msh -cameralookat x:y:1 -print foo)
add_test (V_cameraangle ./neper --rcfile none -V n2-id1.tess -cameraangle 12 -print foo)
add_test (V_camerasky ./neper --rcfile none -V n2-id1.tess -camerasky 1:0:0 -print foo)
add_test (V_cameraprojection ./neper --rcfile none -V n2-id1.tess -cameraprojection orthographic -print foo)
add_test (V_imagesize ./neper --rcfile none -V n2-id1.tess -imagesize 900:800 -print foo)
add_test (V_imagebackground ./neper --rcfile none -V n2-id1.tess -imagebackground black -print foo)
add_test (V_imageantialias ./neper --rcfile none -V n2-id1.tess -imageantialias 1 -print foo)
add_test (V_imageformat ./neper --rcfile none -V n2-id1.tess -imageformat pov -print foo)
add_test (V_loop ./neper --rcfile none -V n2-id1.msh -loop F 1 0.1 1.2 -datanodecoo xyz.stnode -datanodecoofact F -print fooF -endloop)
